Enable CONFIG_KPROBES for Kernel

--- a/compile-kernel/tools/config/config-6.1
+++ b/compile-kernel/tools/config/config-6.1
@@ -640,7 +640,7 @@ CONFIG_KVM=y
 # General architecture-dependent options
 #
 CONFIG_ARCH_HAS_SUBPAGE_FAULTS=y
-# CONFIG_KPROBES is not set
+CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
