Update compiled kernel templates

--- a/compile-kernel/tools/config/config-6.1
+++ b/compile-kernel/tools/config/config-6.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.15 Kernel Configuration
+# Linux/arm64 6.1.18 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Ubuntu clang version 14.0.6"
 CONFIG_GCC_VERSION=0
@@ -644,6 +644,7 @@ CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
+CONFIG_KRETPROBES=y
 CONFIG_HAVE_IOREMAP_PROT=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -1632,7 +1633,6 @@ CONFIG_NET_SCH_PLUG=m
 #
 CONFIG_NET_CLS=y
 CONFIG_NET_CLS_BASIC=m
-CONFIG_NET_CLS_TCINDEX=m
 CONFIG_NET_CLS_ROUTE4=m
 CONFIG_NET_CLS_FW=m
 CONFIG_NET_CLS_U32=m
@@ -5590,8 +5590,6 @@ CONFIG_DRM_DW_MIPI_DSI=y
 # CONFIG_DRM_HISI_HIBMC is not set
 # CONFIG_DRM_HISI_KIRIN is not set
 # CONFIG_DRM_LOGICVC is not set
-# CONFIG_DRM_MXSFB is not set
-# CONFIG_DRM_IMX_LCDIF is not set
 CONFIG_DRM_MESON=y
 CONFIG_DRM_MESON_DW_HDMI=y
 # CONFIG_DRM_ARCPGU is not set
@@ -7064,7 +7062,6 @@ CONFIG_DMA_SUN6I=y
 CONFIG_DW_AXI_DMAC=y
 # CONFIG_FSL_EDMA is not set
 # CONFIG_FSL_QDMA is not set
-# CONFIG_HISI_DMA is not set
 # CONFIG_INTEL_IDMA64 is not set
 # CONFIG_MV_XOR_V2 is not set
 CONFIG_PL330_DMA=y
@@ -8364,9 +8361,6 @@ CONFIG_TMPFS_XATTR=y
 CONFIG_ARCH_SUPPORTS_HUGETLBFS=y
 CONFIG_HUGETLBFS=y
 CONFIG_HUGETLB_PAGE=y
-CONFIG_ARCH_WANT_HUGETLB_PAGE_OPTIMIZE_VMEMMAP=y
-CONFIG_HUGETLB_PAGE_OPTIMIZE_VMEMMAP=y
-# CONFIG_HUGETLB_PAGE_OPTIMIZE_VMEMMAP_DEFAULT_ON is not set
 CONFIG_MEMFD_CREATE=y
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 CONFIG_CONFIGFS_FS=y
@@ -9318,6 +9312,7 @@ CONFIG_TRACING_SUPPORT=y
 #
 # CONFIG_KUNIT is not set
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
+# CONFIG_FUNCTION_ERROR_INJECTION is not set
 # CONFIG_FAULT_INJECTION is not set
 CONFIG_ARCH_HAS_KCOV=y
 CONFIG_CC_HAS_SANCOV_TRACE_PC=y
